add icon buttom(icon search)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		href="https://www.altair-industries.com/comments/feed/">
 	<link rel="alternate" type="application/rss+xml" title="Altair Industries » Principles Comments Feed"
 		href="https://www.altair-industries.com/sample-page/feed/">
+	<link rel="stylesheet" href="<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" 
+		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">">
 	<script type="text/javascript" async=""
 		src="Altair%20Industries%20%E2%80%93%20Venturing%20to%20the%20next%20edge_files/linkid.js"></script>
 	<script async=""
@@ -337,7 +339,7 @@
 										<span class="screen-reader-text">Search for:</span>
 										<input type="text" name="s" class="search-query" placeholder="Search">
 									</label>
-									<button type="submit" class="search-icon"><i class="icon-search"></i></button>
+									<button type="submit" class="search-icon"><i class="fas fa-search"></i></button>
 								</form>
 							</div>
 						</div> <!-- close col-md-6-->
