--- a/index.html
+++ b/index.html
@@ -415,10 +415,7 @@
 								<p style="text-align: center;">– ∞ –</p>
 								<p><strong>Altair Ventures</strong></p>
 								<ul>
-									<li>Altair Industries LLC is a vertical of Altair Ventures, together
-										with Altair Alpha Inc., Altair Expeditions, and Altair Cliff Associates
-										LLC. Altair Ventures is active in commerce in the United States as well
-										as between the United States and Asia Pacific.</li>
+									<li>Altair Industries LLC is a subsidiary of Altair Ventures, dedicated to international trades and supply chain management for industrial products between US, EU, and Vietnam.</li>
 								</ul>
 							</div>
 						</div>
