--- a/index.html
+++ b/index.html
@@ -405,12 +405,7 @@
 								<p style="text-align: center;">– ∞ –</p>
 								<p><strong>Our&nbsp;Mission</strong></p>
 								<ul>
-									<li><strong>Stable and Reliable Supply Chain</strong> – Rooting deeply
-										from Vietnam and South East Asia, Altair Industries is working with its
-										Vietnam business partners in actively building a supply chain of
-										hardwood from the US to import to Vietnam for furniture making. We aim
-										for a cost effective, operation efficiency, and supply stableness to
-										enhance the overall supply chain of our business alliance.</li>
+									<li><strong>Stable and Reliable Supply Chain</strong> – Altair Industries works to build a supply chain of hardwood from the US and EU to import to Vietnam for furniture making. We aim for a cost effective, operation efficiency, and supply stableness to enhance the overall supply chain of our business alliance.</li>
 								</ul>
 								<p style="text-align: center;">– ∞ –</p>
 								
