--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 				</div>
 				<div class="footercredits clearfix">
 					<h5><b>Company: </b><a href="https://www.linkedin.com/company/altair-industries/" target="_blank">Altair Industries</a></h5>
-					<address><a href="https://www.google.com/maps/place/7911+NE+33rd+Dr+%23290,+Portland,+OR+97211,+Hoa+K%E1%BB%B3/@45.5807178,-122.6371664,17z/data=!3m1!4b1!4m5!3m4!1s0x5495a6f52b11e26b:0x7d2e9d4f1e7f5378!8m2!3d45.5807178!4d-122.6349724"></a>7911 NE 33rd Dr, Suite 290, Portland, OR 97211, USA</address>
+					<address><a href="https://www.google.com/maps/place/7911+NE+33rd+Dr+%23290,+Portland,+OR+97211,+Hoa+K%E1%BB%B3/@45.5807178,-122.6371664,17z/data=!3m1!4b1!4m5!3m4!1s0x5495a6f52b11e26b:0x7d2e9d4f1e7f5378!8m2!3d45.5807178!4d-122.6349724"></a>7 NE 196th Ave, Portland, OR 97230, USA</address>
 				</div>
 			</div>
 		</footer>
